<resources>
    <string name="app_name">돕돕</string>

    <string name="KAKAO_APP_KEY">e654a9463a7d36adcf85dd15032bbf68</string>
    <string name="KAKAO_NATIVE_APP_KEY">kakaoe654a9463a7d36adcf85dd15032bbf68</string>
    <string name="KAKAO_REST_API_KEY">5983aa9486cfc0f38fe7cf6fecd00978</string>

    <string name="cancel">취소</string>
    <string name="delete">삭제</string>
    <string name="complete">완료</string>
    <string name="nickname">닉네임</string>
    <string name="name_change">닉네임 수정</string>
    <string name="nickcheck">중복 확인</string>
    <string name="gps">GPS</string>
    <string name="town">XX동</string>
    <string name="date">----.--.-- --:--:--</string>
    <string name="title">제목</string>
    <string name="image">사진</string>

    <string name="modify_profile_actionbar_title">프로필 편집</string>
    <string name="mypage_actionbar_modify">수정</string>

    <string name="nickname_rule1">닉네임에 공백이 포함되어 있습니다.</string>
    <string name="nickname_rule2">닉네임을 입력하지 않았습니다.</string>
    <string name="nickname_rule3">닉네임은 2자 이상 20자 이하여야 합니다.</string>
    <string name="nickname_rule4">닉네임에 영문 소문자 혹은 한글이 1글자 이상 있어야 합니다.</string>
    <string name="nickname_rule5">영문 소문자/한글/숫자 이외의 문자는 사용 불가합니다:)</string>

    <string name="initialsetting_nickname">닉네임</string>
    <string name="initialsetting_nick_hint">예) 편리한돕돕</string>
    <string name="initialsetting_name_rule">✓ 2자 이상 20자 이하의 영문 소문자/한글(숫자혼합 가능)\n✓ 공백 및 특수문자 불가</string>
    <string name="initialsetting_townset">내 동네 설정</string>
    <string name="initialsetting_search_town">주소 검색</string>
    <string name="initialsetting_town_error">주소 검색을 하지 않으셨습니다.</string>
    <string name="initialsetting_btstart">돕돕 시작하기</string>

    <string name="likeuser_info">글에 좋아요를 누른 사용자가 없습니다.</string>

    <string name="login_text">이웃과 돕고 돕는 커뮤니티</string>

    <string name="main_searchpost">동네의 글을 찾고 있습니다.</string>
    <string name="main_add_post">글 추가</string>

    <string name="modifyprofile_change_profile">프로필 사진 변경</string>
    <string name="modifyprofile_check_info">닉네임 중복 확인해 주세요.</string>
    <string name="modifyprofile_town">나의 동네</string>
    <string name="modifyprofile_town_rechange">동네 재설정</string>

    <string name="mypage_load_error">사용자님의 페이지를 로드할 수 없습니다.</string>
    <string name="mypage_posts">닉네임님이 작성한 글</string>
    <string name="mypage_search_post">닉네임님의 글을 찾고 있습니다.</string>

    <string name="post_likenum">하트수</string>
    <string name="post_like">좋아요</string>
    <string name="post_0">0</string>
    <string name="post_num">개</string>
    <string name="post_commentnum">댓글수</string>
    <string name="post_comment">댓글</string>
    <string name="post_no_comment">아직 댓글이 없습니다.</string>
    <string name="post_comment_hint">댓글 달기..</string>
    <string name="post_comment_add">게시</string>

    <string name="posting_content_hint">내용을 입력해주세요.</string>
    <string name="posting_tag">#</string>
    <string name="posting_tag_hint">태그 입력</string>
    <string name="posting_town_set">동네 설정</string>
    <string name="posting_image_text">사진(0/5)</string>

    <string name="tagpost_search">해당 태그를 가진 글을 찾고 있습니다.</string>

    <string name="dialog_setprofile_profile">프로필 사진</string>
    <string name="dialog_setprofile_default">기본 이미지로 변경</string>
    <string name="dialog_setprofile_gallery">갤러리에서 사진 선택</string>

    <string name="item_comment_content">댓글 내용</string>
    <string name="item_photo_pager_error">이미지를 로드할 수 없습니다.\n새로 고침해 주세요.</string>
    <string name="item_tag_text">태그</string>
</resources>
