<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="5dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/commentrow_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/user"
            app:civ_border_width="2dp"
            app:civ_border_color="#AAAAAA" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/commentrow_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/nickname"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="13dp"
                    android:layout_height="13dp"
                    android:layout_marginEnd="2dp"
                    android:src="@drawable/pin_gray"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/gps" />
                <TextView
                    android:id="@+id/commentrow_town"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:text="@string/town"
                    android:textColor="#A3A3A3"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/commentrow_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="#A3A3A3"
                    android:textSize="12sp"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/commentrow_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:text="@string/delete"
            android:textColor="@color/gray"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/commentrow_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:bufferType="spannable"
        android:text="@string/item_comment_content"
        android:textColor="@color/black"/>
</LinearLayout>
