<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="65dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <TextView
        android:id="@+id/toolbar_mp_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:text="@string/cancel"
        android:textColor="@color/gray"
        android:textSize="17sp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/toolbar_mp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/modify_profile_actionbar_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/toolbar_mp_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:text="@string/complete"
        android:textColor="@color/yellow"
        android:textSize="17sp"
        tools:ignore="RelativeOverlap" />
</RelativeLayout>
